// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentTestView assessment view, isScanning is false 1`] = `
<React.Fragment>
  <ScanIncompleteWarning
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {},
      }
    }
    test={-1}
    warningConfiguration={Object {}}
  />
  <ReflowAssessmentView
    assessmentData={Object {}}
    assessmentInstanceTableHandler={Object {}}
    assessmentNavState={
      Object {
        "selectedTestSubview": "step",
        "selectedTestType": -1,
      }
    }
    assessmentTestResult={
      AssessmentTestResult {
        "assessmentProvider": undefined,
        "data": Object {},
        "deps": Object {
          "getRequirementsResults": [Function],
          "outcomeStatsFromManualTestStatus": [Function],
        },
        "visualizationType": -1,
      }
    }
    currentTarget={
      Object {
        "id": -2,
        "title": "test title",
        "url": "test url",
      }
    }
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {},
      }
    }
    featureFlagStoreData={Object {}}
    pathSnippetStoreData={Object {}}
    scanningInProgress={false}
    selectedRequirementIsEnabled={false}
  />
</React.Fragment>
`;

exports[`AssessmentTestView assessment view, isScanning is true 1`] = `
<React.Fragment>
  <ScanIncompleteWarning
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {},
      }
    }
    test={-1}
    warningConfiguration={Object {}}
  />
  <ReflowAssessmentView
    assessmentData={Object {}}
    assessmentInstanceTableHandler={Object {}}
    assessmentNavState={
      Object {
        "selectedTestSubview": "step",
        "selectedTestType": -1,
      }
    }
    assessmentTestResult={
      AssessmentTestResult {
        "assessmentProvider": undefined,
        "data": Object {},
        "deps": Object {
          "getRequirementsResults": [Function],
          "outcomeStatsFromManualTestStatus": [Function],
        },
        "visualizationType": -1,
      }
    }
    currentTarget={
      Object {
        "id": -2,
        "title": "test title",
        "url": "test url",
      }
    }
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {},
      }
    }
    featureFlagStoreData={Object {}}
    pathSnippetStoreData={Object {}}
    scanningInProgress={true}
    selectedRequirementIsEnabled={false}
  />
</React.Fragment>
`;
